--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "printWidth": 80,
   "tabWidth": 2,
   "jsxSingleQuote": false,
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
