--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "format:check": "prettier --check .",
+    "format:fix": "prettier --write .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chordbook/tuner": "^0.0.3",
     "@tailwindcss/vite": "^4.1.8",
+    "lucide-react": "^0.513.0",
     "motion": "^12.16.0",
+    "pitchy": "^4.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router": "^7.6.2",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
@@ -25,6 +31,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "prettier-plugin-tailwindcss": "^0.6.12",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
